# cabal-issue-10235

./: Setup.hs  issue10235.cabal
.github/workflows/: install.yml
exe/: Main.hs
