cabal-version:      1.24
name:               issue10235
version:            0
license:            PublicDomain
author:             Andreas Abel
build-type:         Custom

custom-setup
  setup-depends: base, Cabal, filepath, process

library
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  MyLib
    build-depends:    base

executable issue10235
    main-is:          Main.hs
    hs-source-dirs:   exe
    default-language: Haskell2010
    build-depends:
        base
      , issue10235
